# ChangeLog for sys-apps/portage
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/portage/ChangeLog,v 1.340 2007/02/02 03:09:10 zmedico Exp $

*portage-2.1.2-r6 (02 Feb 2007)

  02 Feb 2007; Zac Medico <zmedico@gentoo.org> +portage-2.1.2-r6.ebuild:
  2.1.2-r6 revbump.  Bugs #162453 and #147007 track fixes since 2.1.1.

  31 Jan 2007; Zac Medico <zmedico@gentoo.org> portage-2.1.2-r5.ebuild:
  Add RDEPEND=">=coreutils-6.4" for bug #164532.

*portage-2.1.2-r5 (29 Jan 2007)

  29 Jan 2007; Zac Medico <zmedico@gentoo.org> +portage-2.1.2-r5.ebuild:
  2.1.2-r5 revbump.  Bugs #162453 and #147007 track fixes since 2.1.1.

*portage-2.1.2-r4 (24 Jan 2007)

  24 Jan 2007; Zac Medico <zmedico@gentoo.org> +portage-2.1.2-r4.ebuild:
  2.1.2-r4 revbump.  Bugs #162453 and #147007 track fixes since 2.1.1.
  KEYWORDS.missing is only a warning now.  Ebuilds with no KEYWORDS can now be
  accepted in package.keywords via the new ** token.  This will allow
  KEYWORDS="-*" to be phased out as per bug #160519.

*portage-2.1.2-r3 (23 Jan 2007)

  23 Jan 2007; Zac Medico <zmedico@gentoo.org> +portage-2.1.2-r3.ebuild:
  2.1.2-r3 revbump. Bug #162453 tracks fixes since 2.1.2.

*portage-2.1.2-r2 (21 Jan 2007)

  21 Jan 2007; Zac Medico <zmedico@gentoo.org> +portage-2.1.2-r2.ebuild:
  2.1.2-r2 revbump. Bug #162453 tracks fixes since 2.1.2.

  20 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org>
  portage-2.1.1-r2.ebuild:
  Stable on MIPS; bug #154510

*portage-2.1.2-r1 (19 Jan 2007)

  19 Jan 2007; Zac Medico <zmedico@gentoo.org> +portage-2.1.2-r1.ebuild:
  2.1.2-r1 revbump.  Bug #162453 tracks fixes since 2.1.2.

*portage-2.1.2 (15 Jan 2007)

  15 Jan 2007; Zac Medico <zmedico@gentoo.org> +portage-2.1.2.ebuild:
  2.1.2 final release.  Bug #147007 tracks fixes since 2.1.1.

*portage-2.1.2_rc4-r9 (13 Jan 2007)

  13 Jan 2007; Zac Medico <zmedico@gentoo.org> +portage-2.1.2_rc4-r9.ebuild: