@@ -17,7 +17,6 @@ DIST portage-2.0.51.22.tar.bz2 257823 RMD160 068a6fbc3e41f7357d1ee4d65894e7903c4
 DIST portage-2.1.1-r2.patch.bz2 5263 RMD160 6b749c6700784ea1ecc615b7b3ed39eade28e489 SHA1 4eaedfedf867346d67744d95d5cb3ad5b0da4417 SHA256 4d2bc33b66c6354f008d798507137a347e35ef7448a10ef17e5108160acb0414
 DIST portage-2.1.1.tar.bz2 297006 RMD160 489e6c3e82527917f5308fdbff1c9add1a03f254 SHA1 6fdcb9897cef7f48d98829ab96caf37e31bd14a2 SHA256 3a5da4bb41ca8495f2673178f120622d8d923d8117b8744921418af5843c0389
 DIST portage-2.1.2-r5.patch.bz2 13738 RMD160 e118d07177007ab88e00d308c46df83c50d05036 SHA1 549a07354519aba39b399186e71ee99aaa012478 SHA256 7a132ffe4ffbe82be5b82a3262210af0a64412adb272459794111e8a50414c37
-DIST portage-2.1.2-r6.patch.bz2 15044 RMD160 42449b02ca375c7ed5a9a6f3ad890ee1c488b6b6 SHA1 267ac47c72df4b0cd2ec10ba5a0ea51f58a93e68 SHA256 4eefc1d3839b7bf9f8744032fb72d9974a95dbf6b709679a312fa746d17e843b
 DIST portage-2.1.2.tar.bz2 311900 RMD160 75da869c02e3574babc2f40e07b18686f384cf99 SHA1 72980508e881d837e78b9309d53dba62ef76c247 SHA256 767e2756e51fbbff5a4fd33e3cec5ad83cf6eaad0fa0fa7c35ad07dbda11a008
 DIST portage-man-pl-2.1-r1.patch.bz2 2076 RMD160 be3898714b94fb0253c1826909649ea51da205ad SHA1 6ec21b29a3eff4a034ea68b4e6a889c8f95dcc3e SHA256 28176c04290478ba4373c28ea047edbdf3a40d3ff69bf92da55d1cfcb828ea5b
 DIST portage-man-pl-2.1.2.tar.bz2 53893 RMD160 46c3656b40bf4ad2530ab2b5fbc563708b86748c SHA1 c3151e0b330c589625830e54053fbc676b2c64de SHA256 960eaa7c6f3a2af44bdc665266a8e884628a562373cc477d301597ecc5ef961f
@@ -34,14 +33,10 @@ EBUILD portage-2.1.2-r5.ebuild 6919 RMD160 b7af50d604247cf677ec69115c41bbe075fd6
 MD5 db1e01ad3196b3f5820c4bbfcad7de59 portage-2.1.2-r5.ebuild 6919
 RMD160 b7af50d604247cf677ec69115c41bbe075fd6162 portage-2.1.2-r5.ebuild 6919
 SHA256 a1267791fa73051fb9d1ee5ad051cac9c8a0af9bb1736adcac0794893e3b8be5 portage-2.1.2-r5.ebuild 6919
-EBUILD portage-2.1.2-r6.ebuild 6919 RMD160 786262323a7336270171581cb36576c8d7e2ceba SHA1 7631bf1deef26b067f955530b5473ccc27046491 SHA256 3f23971612404134cccdda762c23a170d36f0e55ed6244b80dd6f169bafda658
-MD5 f2ac9f99b4834b4735fbafb4b30838cd portage-2.1.2-r6.ebuild 6919
-RMD160 786262323a7336270171581cb36576c8d7e2ceba portage-2.1.2-r6.ebuild 6919
-SHA256 3f23971612404134cccdda762c23a170d36f0e55ed6244b80dd6f169bafda658 portage-2.1.2-r6.ebuild 6919
-MISC ChangeLog 19028 RMD160 72480d3d6bf18e10bd56199b73d0393319355506 SHA1 0dc4d692018f3b2a536fd6e7d808984ceedac9f2 SHA256 0dc1274c1d107f8352ab750c7937e9214fd02c78593697759fa3d364037c8290
-MD5 d2d28f834a6d88fe3c99639fa5a6cb90 ChangeLog 19028
-RMD160 72480d3d6bf18e10bd56199b73d0393319355506 ChangeLog 19028
-SHA256 0dc1274c1d107f8352ab750c7937e9214fd02c78593697759fa3d364037c8290 ChangeLog 19028
+MISC ChangeLog 19138 RMD160 3e12f8755818f5a10e1576cdce6c0095ee74135b SHA1 441fd1e3b3fda170e41451b0fdd6ece885cd76ca SHA256 277ca261bc8e8c396bef00f8168747f7f9caa860c19f6f94fdd8c3547e1f0418
+MD5 bfcd2efe7c8c2f131107cf1b6a1fe118 ChangeLog 19138
+RMD160 3e12f8755818f5a10e1576cdce6c0095ee74135b ChangeLog 19138
+SHA256 277ca261bc8e8c396bef00f8168747f7f9caa860c19f6f94fdd8c3547e1f0418 ChangeLog 19138
 MISC metadata.xml 282 RMD160 ba620b1a97d40fc10a4503f404c6b45b86e361d9 SHA1 6c41671928300da9f983586503dabcd90062b4dd SHA256 27d358e2646578efe2f2050052d739b641e49325565ec9cab345030420505d46
 MD5 bd1d8da118e08d72f8ea20785a604acf metadata.xml 282
 RMD160 ba620b1a97d40fc10a4503f404c6b45b86e361d9 metadata.xml 282
@@ -55,13 +50,10 @@ SHA256 1dbfd88dcf8f81cff40287b480099fe80fd5e0a9f0b153e23d7706446c01be22 files/di
 MD5 b4fab0025677257d932ea13742b51749 files/digest-portage-2.1.2-r5 762
 RMD160 134279ba2d0847e0e665ce6898f57ddb195d9abc files/digest-portage-2.1.2-r5 762
 SHA256 b1ab67ac8a5ca9d7e6ebad72300875f4ebfa1fca4adc71eda392b470be311138 files/digest-portage-2.1.2-r5 762
-MD5 9ba5eb284e0c7632918bbd16118611d2 files/digest-portage-2.1.2-r6 762
-RMD160 0a817c69a94707d9c3dd6c91178b7558ecc26c19 files/digest-portage-2.1.2-r6 762
-SHA256 aab68dd23c2cc299ccec4e7a3a1000f0de512b8446c7cfc871bee8f2c32eea13 files/digest-portage-2.1.2-r6 762
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.1 (GNU/Linux)
 
-iD8DBQFFwqte/ejvha5XGaMRAhEnAKDMB5hW5878diIa/t22lOgcoJ0DcQCg0Qzo
-sDwauDMjLN/QvZBo1qfM9Mg=
-=um7V
+iD8DBQFFxGgn/ejvha5XGaMRAkxSAKDawULMj6431kBVVl2dwa8dbmC0xgCfeIwF
+zZwxMNkKuiph6PubonokRvg=
+=D3iu
 -----END PGP SIGNATURE-----
