@@ -1,9 +1,0 @@
-MD5 cec326ea101511884a939079e9667f40 portage-2.1.2-r6.patch.bz2 15044
-RMD160 42449b02ca375c7ed5a9a6f3ad890ee1c488b6b6 portage-2.1.2-r6.patch.bz2 15044
-SHA256 4eefc1d3839b7bf9f8744032fb72d9974a95dbf6b709679a312fa746d17e843b portage-2.1.2-r6.patch.bz2 15044
-MD5 74c705793edb37ac2fb1d3b2e06c689d portage-2.1.2.tar.bz2 311900
-RMD160 75da869c02e3574babc2f40e07b18686f384cf99 portage-2.1.2.tar.bz2 311900
-SHA256 767e2756e51fbbff5a4fd33e3cec5ad83cf6eaad0fa0fa7c35ad07dbda11a008 portage-2.1.2.tar.bz2 311900
-MD5 6409f79dd5efe7922dd8fa36340c4912 portage-man-pl-2.1.2.tar.bz2 53893
-RMD160 46c3656b40bf4ad2530ab2b5fbc563708b86748c portage-man-pl-2.1.2.tar.bz2 53893
-SHA256 960eaa7c6f3a2af44bdc665266a8e884628a562373cc477d301597ecc5ef961f portage-man-pl-2.1.2.tar.bz2 53893
