@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/portage/ChangeLog,v 1.340 2007/02/02 03:09:10 zmedico Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/portage/ChangeLog,v 1.341 2007/02/03 10:46:57 zmedico Exp $
+
+  03 Feb 2007; Zac Medico <zmedico@gentoo.org> -portage-2.1.2-r6.ebuild:
+  Punt 2.1.2-r6 due to bug #165034.
 
 *portage-2.1.2-r6 (02 Feb 2007)
 
